# rust_queue

./: .gitignore  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: .env.example  Cargo.toml  package.json
apps/backend/migrations/: 20260324223102_create_users_table.sql  20260331144958_create_jobs_table.sql
apps/backend/src/: config.rs  error.rs  lib.rs  macros.rs  main.rs  openapi.rs  state.rs  validation.rs
apps/backend/src/api/: auth.rs  health.rs  job.rs  mod.rs  user.rs
apps/backend/src/dashboard/: mod.rs  pages.rs  partials.rs
apps/backend/src/middleware/: auth.rs
apps/backend/src/models/: auth.rs  health.rs  job.rs  mod.rs  pagination.rs  responses.rs  serde_helpers.rs  user.rs
apps/backend/src/repository/: base.rs  filter.rs  job.rs  mod.rs  user.rs
apps/backend/src/services/: jwt.rs  password.rs
apps/backend/src/worker/: handler.rs  handlers.rs  mod.rs  reaper.rs  registry.rs  runner.rs
apps/backend/tests/: api.rs
apps/backend/tests/api/: auth.rs  job.rs  user.rs
apps/backend/tests/common/: helpers.rs
