[package]
name = "rust_queue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
cookie = { version = "0.18.1", features = ["percent-encode"] }
dotenv = "0.15.0"
envy = "0.4.2"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rand = "0.9"
reqwest = { version = "0.12.25", features = ["json"] }
rust_decimal = { version = "1.39.0", features = [
    "serde",
    "db-postgres",
    "maths",
] }
rust_decimal_macros = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
